2012-05-09  Junji Tojo <Junji.Tojo@cern.ch>
    * Added NTUP_BTAGSLIM, NTUP_BTAGEFF, NTUP_BTAGFULL in Reco_trf.py and MergeNTUP_trf.py
    * Tagging as PATJobTransforms-00-04-13

2012-05-08 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Enable v0finder in AOD->DPD skeleton if NTUP_TOP* is being produced
    * Tagging as PATJobTransforms-00-04-12

2012-04-02 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Add rdo2rdotrig substep for input/outputRDOFile to allow RDO->RDOTrigger (Configuration.py)
    * New AddRDOTrigger argument for transform steering (Configuration.py)
    * Tagging as PATJobTransforms-00-04-11

2012-04-26  Junji Tojo <Junji.Tojo@cern.ch>
        * Added DAOD_ZEEGAMMA and DAOD_ZMUMUGAMMA in Reco_trf.py
        * Tagging as PATJobTransforms-00-04-10

2012-04-25 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Add outputD2AODM_TOPFJETFile as to Reco_trf ListOfDefaultPositionalKeys
    * Tagging as PATJobTransforms-00-04-09

2012-04-20  Junji Tojo <Junji.Tojo@cern.ch>
        * Added NTUP_WPRIMEEN and NTUP_WPRIMEMN in Reco_trf.py and MergeNTUP_trf.py
        * Tagging as PATJobTransforms-00-04-08

2012-04-03 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Removing the special treatment of the NTUP_MINBIAS output.
	  Now it is handled in the same way as all the other D3PD
	  output types.
	* Tagging as PATJobTransforms-00-04-06

2012-04-02 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Add AddOutputTXT_FTKIPFile as recognised argument/type
    * Add outputTXT_FTKIPFile to Reco_trf ListOfDefaultPositionalKeys
    *** Important: From this tag onwards you require PyJobTransformsCore >= 00-09-17 ***
    * Tagging as PATJobTransforms-00-04-05

2012-03-30  David Rousseau  <droussea@voatlas107.cern.ch>
	* share/skeleton.ESDtoDPD_trf.py: disable if doTrigger=False
    * Tagging as PATJobTransforms-00-04-04
	
2012-03-21 Graeme Stewart <graeme.andrew.stewart@cern.ch>